# SSINS

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  BA.py  CHANGELOG.md  Catalog_Gen.py  Catalog_Plot.py  ES.py  INS.py  LICENSE  MANIFEST.in  MF.py  README.md  Util.py  VDH.py  plot_lib.py  pyproject.toml  rfipy.py  setup.py
.github/: pull_request_template.md  testsuite.yml
.github/workflows/: testsuite.yml
EAVILS/: my_utils.py  readme.txt  time_extended.py  vis_plotting.py
SSINS/: Catalog_Plot.py  GIT_INFO  INS_helpers.py  VERSION  __init__.py  event_stat.py  incoherent_noise_spectrum.py  match_filter.py  plot_lib.py  sky_subtract.py  util.py  version.py  vis_diff_hist.py
SSINS/Scripts/: Catalog_Gen.py
SSINS/data/: 1061312640_autos.uvfits  1061312640_mix.uvfits  1061312640_mix_auto_SSINS_data.h5  1061312640_mix_cross_SSINS_data.h5  1061313128.metafits  1061313128_99bl_1pol_half_time_SSINS.h5  1061313128_99bl_1pol_half_time_control_SSINS_matchfilter.yml  1061313128_99bl_1pol_half_time_old_SSINS.h5  1061313128_99bl_1pol_half_time_test_SSINS_matchfilter.yml  1090867840_SSINS_data.h5  1090867840_SSINS_mask.h5  109086_p1_SSINS_mask.h5  HERA_shape_dict.yml  MWA_EoR_Highband_shape_dict.yml  MWA_Highband_Freq_Array.npy  MWA_Highband_shape_dict.pik  __init__.py  rand_gauss.npy  rand_gauss_multivariate.npy  test_obs_list.txt
SSINS/data/arrs/: 1061313128_99bl_1pol_half_time_INS_VDH_MLEs.npym  1061313128_99bl_1pol_half_time_None_ES_avgs.npym  1061313128_99bl_1pol_half_time_None_ES_bins.npy  1061313128_99bl_1pol_half_time_None_ES_counts.npy  1061313128_99bl_1pol_half_time_None_ES_cutoffs.npy  1061313128_99bl_1pol_half_time_None_ES_exp_counts.npy  1061313128_99bl_1pol_half_time_None_ES_exp_error.npy  1061313128_99bl_1pol_half_time_None_ES_uv_grid.npym  1061313128_99bl_1pol_half_time_None_INS_Nbls_match.npym  1061313128_99bl_1pol_half_time_None_INS_bins_match.npym  1061313128_99bl_1pol_half_time_None_INS_counts_match.npym  1061313128_99bl_1pol_half_time_None_INS_data_match.npym  1061313128_99bl_1pol_half_time_None_INS_data_ms_match.npym  1061313128_99bl_1pol_half_time_None_INS_match_events.npy  1061313128_99bl_1pol_half_time_None_INS_match_hists.npy  1061313128_99bl_1pol_half_time_None_VDH_MLEs.npym  1061313128_99bl_1pol_half_time_None_VDH_bins.npy  1061313128_99bl_1pol_half_time_None_VDH_counts.npy  1061313128_99bl_1pol_half_time_None_VDH_errors.npy  1061313128_99bl_1pol_half_time_None_VDH_fits.npy  1061313128_99bl_1pol_half_time_None_avgs.npym  1061313128_99bl_1pol_half_time_None_cutoffs.npy  1061313128_99bl_1pol_half_time_None_exp_counts.npy  1061313128_99bl_1pol_half_time_None_exp_error.npy  1061313128_99bl_1pol_half_time_original_INS_Nbls_match_samp_thresh.npym  1061313128_99bl_1pol_half_time_original_INS_bins.npy  1061313128_99bl_1pol_half_time_original_INS_counts_match_samp_thresh.npy  1061313128_99bl_1pol_half_time_original_INS_data_match_samp_thresh.npym  1061313128_99bl_1pol_half_time_original_INS_data_ms_match_samp_thresh.npym  1061313128_99bl_1pol_half_time_original_INS_match_events.npy  1061313128_99bl_1pol_half_time_original_INS_match_hists.npy  1061313128_99bl_1pol_half_time_original_INS_samp_thresh_events.npy  1061313128_99bl_1pol_half_time_original_VDH_MLEs.npym  (+4 more)
SSINS/tests/: test_INS.py  test_MF.py  test_SS.py  test_plot.py  test_util.py  test_version.py
Scripts/: Brightness_Dict_Integrate.py  Catalog_Gen.py  Event_Brightness.py  MWA_EoR_High_Flag.py  MWA_EoR_High_uvfits_write.py  MWA_gpubox_to_SSINS.sh  MWA_gpubox_to_SSINS_on_Pawsey.sh  MWA_vis_to_SSINS.py  Match_Fraction.py  Match_Fraction_Dict_Gen.py  Occ_Scatter.py  Read_INS.py  Run_HERA_SSINS.py  occ_csv.py
ci/: SSINS_tests.yml
docs/: Catalog_Plot.rst  conf.py  conftest.py  event_stat.rst  incoherent_noise_spectrum.rst  index.rst  match_filter.rst  new_tutorial.rst  plot_lib.rst  readthedocs.yml  requirements.txt  rtd-env.yml  sky_subtract.rst  tutorial.rst  util.rst
scripts/: Event_Brightness.py  MWA_EoR_High_Flag.py  MWA_EoR_High_ssins_uvfits_write.py  MWA_EoR_High_uvfits_write.py  MWA_gpubox_to_SSINS_on_Pawsey.sh  MWA_vis_to_SSINS.py  Occ_Scatter.py  Run_HERA_SSINS.py  compare_masks.py  occ_csv.py  significance_record.py
(+34 files in other folders)
